WIP 20230324 Added nUnit Tests.

--- a/Fabkom.FIX.RollingLogs/packages.config
+++ b/Fabkom.FIX.RollingLogs/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CodeCoverage" version="17.6.0-preview-20230223-05" targetFramework="net472" />
+  <package id="Microsoft.NET.Test.Sdk" version="17.6.0-preview-20230223-05" targetFramework="net472" />
   <package id="NLog" version="5.1.2" targetFramework="net472" />
+  <package id="NUnit" version="3.13.3" targetFramework="net472" />
+  <package id="NUnit.Analyzers" version="3.6.1" targetFramework="net472" developmentDependency="true" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.7.1" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.5.0-alpha.4" targetFramework="net472" />
   <package id="QuickFIXn.Core" version="1.10.0" targetFramework="net472" />
 </packages>
