--- a/Fabkom.FIX.RollingLogs/Fabkom.FIX.RollingLogs.csproj
+++ b/Fabkom.FIX.RollingLogs/Fabkom.FIX.RollingLogs.csproj
@@ -62,13 +62,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extentions.cs" />
+    <Compile Include="NLogInternalLoggerConfig.cs" />
     <Compile Include="NLogLogFactory.cs" />
     <Compile Include="NLogLog.cs" />
     <Compile Include="NLogConfig.cs" />
     <Compile Include="NLogXMLConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessionNLogConfig.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="TestData.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
